2017-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.h src/plot3d.c src/datafile.c:  Add a slot in the plot 
	structure to track a 2nd named sampling variable, e.g. 
	    splot [u=1:5][v=1:5] '++' using (u):(v):(u*sin(v))

2017-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h (ACTUAL_STORE_WITH_LOG_AND_UPDATE_RANGE) 
	src/axis.c (update_primary_axis_range) src/plot2d.c src/plot3d.c 
	src/datafile.c (df_generate_pseudodata):

	The nonlinear axis code as originally introduced tracked data min/max
	in the primary (i.e. linear) axis structure.  That was unnecessarily
	complicated since it required a coordinate transformation to update the
	range every time a point was stored.  Also since the current range
	stored in the visible axis structure was not always up-to-date, some
	autoscaling operations during plot layout could fail.
	Now we change this to track data min/max in the secondary (i.e. visible)
	axis coordinate system. At the end of data input and function evaluation
	we call new routine update_primary_axis() just once per nonlinear axis
	to transfer the min/max values to the primary axis structure as well.

	* demo/sampling.dem:  Unit tests for some of the failures addressed
	by this set of changes and a couple that have not been fixed yet.

	* src/axis.h src/plot2d.c:  The macro ACTUAL_STORE_WITH_LOG_...
	no longer needs a special case parameter for the color axis.

2017-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_generate_pseudodata):  Use axes u and v to sample
	pseudofile "++" rather than axes x and y.  This allows for sampling
	ranges that are distinct from the plot axis range, as was already true
	for sampling "+".  The downside of this change is that we don't 
	currently support nonlinear sampling on u or v, so it doesn't work as
	well when plotting logscale x or y.

	* src/plot2d.c (plotrequest):  Initialize state of u and v axes.

2017-03-20  Jeremy Green  <jeremyrgreen@users.sf.net>
